Able to get menu to open and close with overlapping fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,10 +16,16 @@ html {
   background: var(--black);
 }
 
+/* NAVIGATION MENU */
 nav {
+  display: none;
   background: var(--black);
   color: var(--white);
   font-size: 2rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 nav ul {
   list-style-type: none;
@@ -58,4 +64,23 @@ nav a:hover {
 }
 .close-menu-btn img {
   transform: rotate(180deg);
+}
+
+/* MOBILE TOP BAR */
+
+.top-bar {
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 0.5em 10vw;
+}
+.open-menu-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.sm-screen-logo {
+  margin: 0 auto;
+  color: var(--blue);
 }
